--- a/app/src/main/res/layout/affichage_ligne_base.xml
+++ b/app/src/main/res/layout/affichage_ligne_base.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
-    <TextView android:id="@+id/nom_fichier"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <TextView android:id="@+id/commentaire"
-        android:textSize="16sp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
+    android:layout_width="fill_parent"
+    android:layout_height="60dp">
+
+    <LinearLayout android:id="@+id/LinearLayout01" android:orientation="vertical" android:layout_width="wrap_content"
+        android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:padding="10px"
+        android:layout_weight="1">
+        <TextView android:text="@string/nom_fichier"
+            android:id="@+id/nom_fichier"
+            android:textStyle="bold"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+        </TextView>
+        <TextView android:text="@string/commentaire"
+            android:id="@+id/commentaire"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+        </TextView>
+    </LinearLayout>
 </LinearLayout>
